# postman-gpui

./: .gitignore  ARCHITECTURE.md  CHANGES.md  Cargo.toml  FEATURE_HISTORY_LIST.md  FORM_DATA_TEST_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_SUMMARY.md  README-zh.md  README.md  VISUAL_GUIDE.md  test_server.py  todo.md  verify_get_headers.py
.github/workflows/: ci.yml
examples/: advanced_dropdown_example.rs  basic_request.rs  deferred_anchored_example.rs  element_display_to_string_example.rs  element_from_into_example.rs  element_into_element_example.rs  text_input_demo.rs
src/: lib.rs  main.rs
src/app/: mod.rs  postman_app.rs
src/assets/: mod.rs
src/errors/: mod.rs
src/http/: client.rs  executor.rs  mod.rs  request.rs  response.rs
src/models/: collection.rs  history.rs  mod.rs  request.rs  workspace.rs
src/ui/: collection_panel.rs  mod.rs  request_panel.rs  response_panel.rs
src/ui/components/: body_editor.rs  body_input.rs  body_input_backup.rs  body_input_new.rs  body_input_old.rs  body_input_v2.rs  dropdown.rs  header_input.rs  headers_editor.rs  history_list.rs  method_selector.rs  mod.rs  response_viewer.rs  text_input.rs  url_input.rs
src/ui/components/common/: mod.rs
src/ui/components/display/: history_list.rs  method_selector.rs  mod.rs  response_viewer.rs
src/ui/components/input/: body_input.rs  header_input.rs  mod.rs
src/utils/: formatter.rs  helpers.rs
