[package]
name = "postman-gpui"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
anyhow = "1.0.75" 
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
unicode-segmentation = "1.10"
serde_json = "1.0"
chrono = "0.4"
form_urlencoded = "1.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }